// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The controller should setup the routes correctly 1`] = `
[MockFunction] {
  "calls": [
    [],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "engine": [MockFunction] {
          "calls": [
            [
              "html",
              "Express Router",
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "listen": [MockFunction] {
          "calls": [
            [
              1337,
              [Function],
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "set": [MockFunction] {
          "calls": [
            [
              "views",
              [
                "./public/partials",
                "./public/views",
              ],
            ],
            [
              "view engine",
              "html",
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "use": [MockFunction] {
          "calls": [
            [
              "JSON Parser",
            ],
            [
              "urlencoded",
            ],
            [
              "Static",
            ],
            [
              {
                "use": [MockFunction] {
                  "calls": [
                    [
                      "/api",
                      "API Module",
                    ],
                    [
                      "/",
                      "User Module",
                    ],
                  ],
                  "results": [
                    {
                      "type": "return",
                      "value": undefined,
                    },
                    {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`The controller should setup the routes correctly 2`] = `
[MockFunction] {
  "calls": [
    [
      {
        "caseSensitive": true,
        "strict": true,
      },
    ],
    [
      {
        "caseSensitive": true,
        "strict": true,
      },
    ],
    [
      {
        "caseSensitive": true,
        "strict": true,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "use": [MockFunction] {
          "calls": [
            [
              "/api",
              "API Module",
            ],
            [
              "/",
              "User Module",
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
    {
      "type": "return",
      "value": {
        "use": [MockFunction] {
          "calls": [
            [
              "/api",
              "API Module",
            ],
            [
              "/",
              "User Module",
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
    {
      "type": "return",
      "value": {
        "use": [MockFunction] {
          "calls": [
            [
              "/api",
              "API Module",
            ],
            [
              "/",
              "User Module",
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`The controller should setup the routes correctly 3`] = `
[MockFunction] {
  "calls": [
    [
      "/api",
      "API Module",
    ],
    [
      "/",
      "User Module",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The controller should setup the routes correctly 4`] = `
[MockFunction] {
  "calls": [
    [
      "JSON Parser",
    ],
    [
      "urlencoded",
    ],
    [
      "Static",
    ],
    [
      {
        "use": [MockFunction] {
          "calls": [
            [
              "/api",
              "API Module",
            ],
            [
              "/",
              "User Module",
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The controller should setup the routes correctly 5`] = `
[MockFunction] {
  "calls": [
    [
      "html",
      "Express Router",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The controller should setup the routes correctly 6`] = `
[MockFunction] {
  "calls": [
    [
      "views",
      [
        "./public/partials",
        "./public/views",
      ],
    ],
    [
      "view engine",
      "html",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The controller should setup the routes correctly 7`] = `
[MockFunction] {
  "calls": [
    [
      1337,
      [Function],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
